fixed weird height thing with 18px hack, for now bottom border must stay at 30px for another weird reason, also aligned in brief and article title via messing with in brief padding bottom, wonder if it will work for everything.

--- a/mycms/media/readingStyle.css
+++ b/mycms/media/readingStyle.css
@@ -94,9 +94,10 @@ padding-left:22px;
 /*        padding-left: 15px;*/
         padding-right: 15px;
         padding-top: 20px;
+        padding-bottom:30px;/*10px*/
         text-align: left;
         position: relative;
-        margin-bottom: 18px;
+/*        margin-bottom: 19px;*/
 
 }
 
